# Vandior

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  .sonarcloud.properties  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dependencies.cmake  LICENSE  LICENSE.exprtk  ProjectOptions.cmake  README.md  README_building.md  README_dependencies.md  README_docker.md  SECURITY.md  base.hpp  build_and_callgrind.sh  build_and_run.sh  build_and_test_coverage.sh  build_and_valgrind.sh  cleanHtlmAndCss.sh  codecov.yaml  gcovr.cfg  gcovr2.cfg  hello.cpp  input.vn  input2.vn  sum.cpp
.devcontainer/: devcontainer.json
.github/: constants.env  dependabot.yml  pull_request_template.md
.github/actions/setup_cache/: action.yml
.github/workflows/: auto-clang-format.yml  ci.yml  codeql-analysis.yml  notifier.yml
base/: base.hpp  base.vnh  basemath.cpp  container.hpp  headers.hpp  primitives.hpp  string.hpp
cmake/: CPM.cmake  Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  Simd.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  Tests.cmake  Utilities.cmake  VCEnvironment.cmake
configured_files/: config.hpp.in
examples/: array.vn  complexSum.vn  hello.vn  max.vn  palindrome.vn  sum.vn
fuzz_test/: CMakeLists.txt  fuzz_tester.cpp
include/: base.hpp  headers.hpp  primitives.hpp  string.hpp
include/Vandior/: AST.hpp  ASTNode.hpp  BinaryExpressionNode.hpp  CodeSourceLocation.hpp  DoubleNumberNode.hpp  Expression.hpp  ExpressionFactory.hpp  FileReader.hpp  FileReaderError.hpp  FolderCreationResult.hpp  FunType.hpp  Instruction.hpp  InstructionException.hpp  InstructionFactory.hpp  InstructionType.hpp  IntegerNumberNode.hpp  Log.hpp  NodeType.hpp  NumberNode.hpp  NumberNodeType.hpp  Parser.hpp  Scope.hpp  ScopeType.hpp  Timer.hpp  Token.hpp  TokenType.hpp  Tokenizer.hpp  TokenizerUtility.hpp  TranpilerException.hpp  Transpiler.hpp  TranspilerException.hpp  UnaryExpressionNode.hpp  VariableNode.hpp  casts.hpp  disableWarn.hpp  exprtk.hpp  format.hpp  glm_matld.hpp  glm_prety_string_cast.hpp  headers.hpp  (+3 more)
include/Vandior/cast/: BaseCast.hpp  BitCast.hpp  NarrowCast.hpp  TypeSizes.hpp  casts.hpp
include/Vandior/fs/: FSConstats.hpp  FileCreationResult.hpp  FileDelitionResult.hpp  FolderCreationResult.hpp  FolderDelitionResult.hpp  FolderOperationResult.hpp  OSOperationResult.hpp  fs.hpp
include/Vandior/lexer/: CodeSourceLocation.hpp  CompTokenType.hpp  ErrorHandler.hpp  Token.hpp  TokenType.hpp  Tokenizer.hpp  TokenizerConstants.hpp  TokenizerUtility.hpp
include/Vandior/parser/: AST.hpp  ASTNode.hpp  ArrayNode.hpp  BinaryExpressionNode.hpp  CompNodeType.hpp  DoubleNumberNode.hpp  IndexNode.hpp  IntegerNumberNode.hpp  LiteralNode.hpp  NodeType.hpp  NullptrNode.hpp  NumberNode.hpp  NumberNodeType.hpp  Parser.hpp  ParserException.hpp  Statement.hpp  TypeNode.hpp  UnaryExpressionNode.hpp  VariableNode.hpp
include/Vandior/timer/: Clocks.hpp  Nanollds.hpp  TimePoints.hpp  Timer.hpp  Times.hpp  cronoRedefinition.hpp  timeFactors.hpp
include/Vandior/transpiler/: ProjectBuilder.hpp  Transpiler.hpp
include/VandiorCore/: FileReader.hpp  FileReaderError.hpp  Log.hpp  disableWarn.hpp  format.hpp  glm_prety_string_cast.hpp  headersCore.hpp  vandiorCore.hpp
include/VandiorCore/cast/: NarrowCast.hpp  casts.hpp
include/VandiorCore/timer/: Timer.hpp  TimerConstats.hpp  Times.hpp
ingnore/: AST.hpp  Parser.cpp
src/: CMakeLists.txt
src/Vandior/: CMakeLists.txt  Costanti.hpp  FileReaderError.hpp  FolderCreationResult.hpp  main.cpp
src/Vandior_Core_lib/: CMakeLists.txt  glm_prety_string_cast.cpp  vandiorCore.cpp
src/Vandior_Lib/: ASTNode.cpp  BinaryExpressionNode.cpp  CMakeLists.txt  DoubleNumberNode.cpp  Expression.cpp  ExpressionFactory.cpp  FunType.cpp  Instruction.cpp  InstructionException.cpp  InstructionFactory.cpp  IntegerNumberNode.cpp  NumberNode.cpp  Parser.cpp  Scope.cpp  Token.cpp  Tokenizer.cpp  TokenizerUtility.cpp  Transpiler.cpp  UnaryExpressionNode.cpp  VariableNode.cpp  sample_library.cpp  vandior.cpp
src/Vandior_Lib/lexer/: ErrorHandler.cpp  Token.cpp  Tokenizer.cpp  TokenizerUtility.cpp
src/Vandior_Lib/parser/: AST.cpp  ASTNode.cpp  ArrayNode.cpp  BinaryExpressionNode.cpp  DoubleNumberNode.cpp  IndexNode.cpp  IntegerNumberNode.cpp  NullptrNode.cpp  NumberNode.cpp  Parser.cpp  Statement.cpp  TypeNode.cpp  UnaryExpressionNode.cpp  VariableNode.cpp
src/Vandior_Lib/transpiler/: ProjectBuilder.cpp  Transpiler.cpp
src/ftxui_sample/: CMakeLists.txt  main.cpp
src/sample_library/: CMakeLists.txt
test/: CMakeLists.txt  benchmarks.cpp  constexpr_tests.cpp  test_imp.vn  tests-compiler.cpp  tests.cpp  testsConstanst.hpp
